--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">Simple Notes</string>
     <string name="widget_config">Thank you for using Simple Notes.\nFor more simple apps please visit SimpleMobileTools.com.\n</string>
+
+    <!-- About -->
+    <string name="about">About</string>
+    <string name="website">For more simple apps please visit:\nhttp://simplemobiletools.com</string>
+    <string name="email_label">You can send your feedback and new app suggestions at:</string>
+    <string name="email">hello@simplemobiletools.com</string>
+    <string name="license">License</string>
+    <string name="version">v %1$s</string>
+    <string name="copyright">Copyright © Simple Mobile Tools %1$d</string>
 </resources>
