--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,15 +5,17 @@
 
     <!-- About -->
     <string name="about">About</string>
-    <string name="website">For more simple apps please visit:\nhttp://simplemobiletools.com</string>
-    <string name="email_label">You can send your feedback and new app suggestions at:</string>
+    <string name="website">For more simple apps or source codes please visit:\nhttp://simplemobiletools.com</string>
+    <string name="email_label">You can send your feedback or new app suggestions at:</string>
     <string name="email">hello@simplemobiletools.com</string>
-    <string name="open_source_licences"><u>Open-source licences</u></string>
+    <string name="third_party_licences_underlined"><u>Third party licences</u></string>
     <string name="version">v %1$s</string>
     <string name="copyright">Copyright © Simple Mobile Tools %1$d</string>
 
     <!--License-->
-    <string name="license">License</string>
+    <string name="license_note">License</string>
+    <string name="notice">This app uses the following third party libraries to make my life easier. Thank you.</string>
+    <string name="third_party_licences">Third party licences</string>
     <string name="butterknife_title">Butter Knife (view injector)</string>
     <string name="butterknife_text">Copyright 2013 Jake Wharton\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License.</string>
     <string name="butterknife_url">https://github.com/JakeWharton/butterknife</string>
