--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -10,6 +10,7 @@
 
     <!-- Settings -->
     <string name="settings">Inställningar</string>
+    <string name="dark_theme">Mörkt tema</string>
     <string name="autosave">Spara automatiskt</string>
 
     <!-- About -->
