--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
 
     <!-- Settings -->
     <string name="settings">Settings</string>
+    <string name="dark_theme">Dark theme</string>
     <string name="autosave">Autosave</string>
 
     <!-- About -->
