--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="cannot_share_empty_text">Cannot share empty text</string>
     <string name="text_saved">Text Saved</string>
     <string name="simple_note">Simple Note</string>
+    <string name="enable_autosave">Enable autosave</string>
+    <string name="cancel">Cancel</string>
+    <string name="unsaved_changes">Unsaved changes</string>
+    <string name="autosave_prompt_msg">Changes made to the note have not be saved. Do you want to enable autosave?</string>
 
     <!-- Settings -->
     <string name="settings">Settings</string>
