implement enabling Autosave from the dialog

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -10,7 +10,7 @@
     <string name="enable_autosave">Enable autosave</string>
     <string name="cancel">Cancel</string>
     <string name="unsaved_changes">Unsaved changes</string>
-    <string name="autosave_prompt_msg">Changes made to the note have not be saved. Do you want to enable autosave?</string>
+    <string name="autosave_prompt_msg">Changes made to the note have not been saved. Do you want to enable autosave?</string>
 
     <!-- Settings -->
     <string name="settings">設定</string>
