--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Simple Notes</string>
+    <string name="app_launcher_name">Notes</string>
     <string name="widget_config">Grazie per avere scelto Simple Notes.\nPer altre semplici app visita SimpleMobileTools.com.\n</string>
     <string name="save">Salva</string>
     <string name="share">Condividi</string>
