--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">シンプル メモ</string>
+    <string name="app_launcher_name">Notes</string>
     <string name="widget_config">シンプルメモのご利用ありがとうございます。\n他のシンプルアプリは SimpleMobileTools.com をご覧ください。\n</string>
     <string name="save">保存</string>
     <string name="share">共有</string>
