--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Simple Notes</string>
+    <string name="app_launcher_name">Notes</string>
     <string name="widget_config">Tack för att du använder Simple Notes.\nFör fler enkla appar, gå till simplemobiletools.com.\n</string>
     <string name="save">Spara</string>
     <string name="share">Dela</string>
