--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Simple Notes</string>
+    <string name="app_launcher_name">Notes</string>
     <string name="widget_config">Thank you for using Simple Notes.\nFor more simple apps please visit SimpleMobileTools.com.\n</string>
     <string name="save">Save</string>
     <string name="share">Share</string>
