--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -17,6 +17,10 @@
     <string name="settings">Inställningar</string>
     <string name="dark_theme">Mörkt tema</string>
     <string name="autosave">Spara automatiskt</string>
+    <string name="note_font_size">Note font size</string>
+    <string name="small">Small</string>
+    <string name="normal">Normal</string>
+    <string name="large">Large</string>
 
     <!-- About -->
     <string name="about">Om</string>
