--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -6,17 +6,12 @@
     <string name="share">Teilen</string>
     <string name="share_via">Teilen via</string>
     <string name="cannot_share_empty_text">Leerer Text kann nicht geteilt werden</string>
-    <string name="text_saved">Text gespeichert</string>
+    <string name="note_saved">Text gespeichert</string>
     <string name="simple_note">Einfache Notiz</string>
-    <string name="enable_autosave">Aktiviere automatisches Speichern</string>
-    <string name="cancel">Abbrechen</string>
-    <string name="unsaved_changes">Ungesicherte Änderungen</string>
-    <string name="autosave_prompt_msg">Diese Notiz enthält ungesicherte Änderungen. Möchtest du automatisches Speichern aktivieren?</string>
 
     <!-- Settings -->
     <string name="settings">Einstellungen</string>
     <string name="dark_theme">Dunkles Thema</string>
-    <string name="autosave">Automatisches Speichern</string>
     <string name="note_font_size">Note font size</string>
     <string name="small">Small</string>
     <string name="normal">Normal</string>
