--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -6,17 +6,12 @@
     <string name="share">共有</string>
     <string name="share_via">共有...</string>
     <string name="cannot_share_empty_text">空のテキストは共有できません</string>
-    <string name="text_saved">テキストを保存しました</string>
+    <string name="note_saved">テキストを保存しました</string>
     <string name="simple_note">シンプル メモ</string>
-    <string name="enable_autosave">Enable autosave</string>
-    <string name="cancel">Cancel</string>
-    <string name="unsaved_changes">Unsaved changes</string>
-    <string name="autosave_prompt_msg">Changes made to the note have not been saved. Do you want to enable autosave?</string>
 
     <!-- Settings -->
     <string name="settings">設定</string>
     <string name="dark_theme">ダークテーマ</string>
-    <string name="autosave">自動保存</string>
     <string name="note_font_size">Note font size</string>
     <string name="small">Small</string>
     <string name="normal">Normal</string>
