--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,17 +6,12 @@
     <string name="share">Share</string>
     <string name="share_via">Share via</string>
     <string name="cannot_share_empty_text">Cannot share empty text</string>
-    <string name="text_saved">Text Saved</string>
+    <string name="note_saved">Note Saved</string>
     <string name="simple_note">Simple Note</string>
-    <string name="enable_autosave">Enable autosave</string>
-    <string name="cancel">Cancel</string>
-    <string name="unsaved_changes">Unsaved changes</string>
-    <string name="autosave_prompt_msg">Changes made to the note have not been saved. Do you want to enable autosave?</string>
 
     <!-- Settings -->
     <string name="settings">Settings</string>
     <string name="dark_theme">Dark theme</string>
-    <string name="autosave">Autosave</string>
     <string name="note_font_size">Note font size</string>
     <string name="small">Small</string>
     <string name="normal">Normal</string>
