--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="share">Share</string>
     <string name="share_via">Share via</string>
     <string name="cannot_share_empty_text">Cannot share empty text</string>
-    <string name="note_saved">Note Saved</string>
+    <string name="note_saved">Note saved</string>
     <string name="simple_note">Simple Note</string>
 
     <!-- Settings -->
