--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -8,6 +8,11 @@
     <string name="cannot_share_empty_text">Det går inte att dela utan text</string>
     <string name="note_saved">Text sparad</string>
     <string name="simple_note">Simple Note</string>
+    <string name="new_note">Add a new note</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="no_title">Please name your note</string>
+    <string name="title_taken">A note with that title already exists</string>
 
     <!-- Settings -->
     <string name="settings">Inställningar</string>
