--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -13,6 +13,7 @@
     <string name="cancel">Cancel</string>
     <string name="no_title">Please name your note</string>
     <string name="title_taken">A note with that title already exists</string>
+    <string name="open_note">Open note</string>
 
     <!-- Settings -->
     <string name="settings">設定</string>
@@ -35,7 +36,7 @@
     <string name="follow_us">フォローしてください:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
 
-    <!--License-->
+    <!-- License -->
     <string name="notice">このアプリは、私の人生を容易にするために、次のサードパーティのライブラリーを使用しています。 ありがとうございます。</string>
     <string name="third_party_licences">サードパーティー ライセンス</string>
     <string name="butterknife_title"><u>Butter Knife (ビュー インジェクター)</u></string>
