add a prompt for deleting note

--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -15,6 +15,8 @@
     <string name="title_taken">A note with that title already exists</string>
     <string name="open_note">Open note</string>
     <string name="delete_note">Delete note</string>
+    <string name="delete_note_prompt_title">Delete note</string>
+    <string name="delete_note_prompt_message">Are you sure you want to delete note \"%1$s\"?</string>
 
     <!-- Settings -->
     <string name="settings">Inställningar</string>
