display the current note at the top

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -18,6 +18,7 @@
     <string name="delete_note_prompt_title">Delete note</string>
     <string name="delete_note_prompt_message">Are you sure you want to delete note \"%1$s\"?</string>
     <string name="pick_a_note">Pick a note</string>
+    <string name="current_note">Current note:</string>
 
     <!-- Settings -->
     <string name="settings">Einstellungen</string>
