--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -20,6 +20,7 @@
     <string name="pick_a_note">Notiz auswählen</string>
     <string name="current_note">Aktuelle Notiz:</string>
     <string name="change_widget_note">Change widget\'s note</string>
+    <string name="pick_a_note_for_widget">Pick a note for the widget</string>
 
     <!-- Settings -->
     <string name="settings">Einstellungen</string>
