--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -20,6 +20,7 @@
     <string name="pick_a_note">Selecione uma nota</string>
     <string name="current_note">Nota atual:</string>
     <string name="change_widget_note">Change widget\'s note</string>
+    <string name="pick_a_note_for_widget">Pick a note for the widget</string>
 
     <!-- Settings -->
     <string name="settings">Definições</string>
