--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -1,26 +1,26 @@
 <resources>
     <string name="app_name">Simple Notes</string>
     <string name="app_launcher_name">Notas</string>
-    <string name="widget_config">Obrigado por usar Simple Notes.\nPara mais aplicações simples por favor visite SimpleMobileTools.com.\n</string>
+    <string name="widget_config">Obrigado por usar o Simple Notes.\nPara mais aplicações Simple, aceda a SimpleMobileTools.com.\n</string>
     <string name="save">Guardar</string>
     <string name="share">Partilhar</string>
     <string name="share_via">Partilhar via</string>
-    <string name="cannot_share_empty_text">Não é possível partilhar texto em branco</string>
+    <string name="cannot_share_empty_text">Não pode partilhar texto em branco</string>
     <string name="note_saved">Nota guardada</string>
     <string name="simple_note">Nota simples</string>
-    <string name="new_note">Adicionar uma nova nota</string>
+    <string name="new_note">Adicionar uma nota</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancelar</string>
     <string name="no_title">Por favor dê um nome à sua nota</string>
-    <string name="title_taken">Já existe uma nota com esse título</string>
+    <string name="title_taken">Já existe uma nota com este título</string>
     <string name="open_note">Abrir nota</string>
-    <string name="delete_note">Eliminar nota</string>
-    <string name="delete_note_prompt_title">Eliminar nota</string>
-    <string name="delete_note_prompt_message">Pretende mesmo eliminar a nota \"%1$s\"?</string>
+    <string name="delete_note">Apagar nota</string>
+    <string name="delete_note_prompt_title">Apagar nota</string>
+    <string name="delete_note_prompt_message">Deseja mesmo apagar a nota \"%1$s\"?</string>
     <string name="pick_a_note">Selecione uma nota</string>
     <string name="current_note">Nota atual:</string>
-    <string name="change_widget_note">Change widget\'s note</string>
-    <string name="pick_a_note_for_widget">Pick a note for the widget</string>
+    <string name="change_widget_note">Alterar nota do widget</string>
+    <string name="pick_a_note_for_widget">Escolha uma nota para o widget</string>
 
     <!-- Settings -->
     <string name="settings">Definições</string>
@@ -32,21 +32,26 @@
     <string name="extra_large">Muito grande</string>
 
     <!-- About -->
-    <string name="about">Sobre</string>
-    <string name="website">Mais aplicações simples e código de fonte em:\nhttp://simplemobiletools.com</string>
+    <string name="about">Acerca</string>
+    <string name="website">Mais aplicações Simple e código fonte em:\nhttp://simplemobiletools.com</string>
     <string name="email_label">Envie os seus comentários ou sugestões para:</string>
     <string name="third_party_licences_underlined"><u>Licenças de terceiros</u></string>
+	<string name="email" translatable="false">hello@simplemobiletools.com</string>
     <string name="invite_friends_underlined"><u>Convidar amigos</u></string>
-    <string name="share_text">Olá, experimente %1$s em %2$s</string>
+    <string name="share_text">Olá, experimenta %1$s em %2$s</string>
     <string name="invite_via">Convidar via</string>
-    <string name="rate_us_underlined"><u>Classifique-nos na Play Store</u></string>
+    <string name="rate_us_underlined"><u>Avalie-nos na Play Store</u></string>
     <string name="follow_us">Siga-nos:</string>
-    <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
+    <string name="copyright">V %1$s\nCopyright © Simple Mobile Tools %2$d</string>
 
     <!-- License -->
     <string name="notice">Esta aplicação usa as seguintes bibliotecas de terceiros para facilitar a minha vida. Obrigado.</string>
     <string name="third_party_licences">Licenças de terceiros</string>
-    <string name="butterknife_title"><u>Butter Knife (injetor de \"views\")</u></string>
-    <string name="ambilwarna_title"><u>AmbilWarna (selecionador de cores)</u></string>
+    <string name="butterknife_title"><u>Butter Knife (injetor de vistas)</u></string>
+    <string name="butterknife_text" translatable="false">Copyright 2013 Jake Wharton\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License.</string>
+    <string name="butterknife_url" translatable="false">https://github.com/JakeWharton/butterknife</string>
+    <string name="ambilwarna_title"><u>AmbilWarna (seletor de cores)</u></string>
+    <string name="ambilwarna_text" translatable="false">Copyright 2009-2015 Yuku\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
+    <string name="ambilwarna_url" translatable="false">https://github.com/yukuku/ambilwarna</string>
 
 </resources>
