--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">シンプル メモ</string>
-    <string name="app_launcher_name">Notes</string>
+    <string name="app_launcher_name">メモ</string>
     <string name="widget_config">シンプルメモのご利用ありがとうございます。\n他のシンプルアプリは SimpleMobileTools.com をご覧ください。\n</string>
     <string name="save">保存</string>
     <string name="share">共有</string>
@@ -8,43 +8,43 @@
     <string name="cannot_share_empty_text">空のテキストは共有できません</string>
     <string name="note_saved">テキストを保存しました</string>
     <string name="simple_note">シンプル メモ</string>
-    <string name="new_note">Add a new note</string>
+    <string name="new_note">新しいメモを追加</string>
     <string name="ok">OK</string>
-    <string name="cancel">Cancel</string>
-    <string name="no_title">Please name your note</string>
-    <string name="title_taken">A note with that title already exists</string>
-    <string name="open_note">Open note</string>
-    <string name="delete_note">Delete note</string>
-    <string name="delete_note_prompt_title">Delete note</string>
-    <string name="delete_note_prompt_message">Are you sure you want to delete note \"%1$s\"?</string>
-    <string name="pick_a_note">Pick a note</string>
-    <string name="current_note">Current note:</string>
-    <string name="change_widget_note">Change widget\'s note</string>
-    <string name="pick_a_note_for_widget">Pick a note for the widget</string>
+    <string name="cancel">キャンセル</string>
+    <string name="no_title">メモに名前をつけてください</string>
+    <string name="title_taken">そのタイトルのメモはすでに存在します</string>
+    <string name="open_note">メモを開く</string>
+    <string name="delete_note">メモを削除</string>
+    <string name="delete_note_prompt_title">メモを削除</string>
+    <string name="delete_note_prompt_message">メモ \"%1$s\" を削除してもよろしいですか?</string>
+    <string name="pick_a_note">メモを選択</string>
+    <string name="current_note">現在のメモ:</string>
+    <string name="change_widget_note">ウィジェットのメモを変更</string>
+    <string name="pick_a_note_for_widget">ウィジェットのメモを選択</string>
 
     <!-- Settings -->
     <string name="settings">設定</string>
     <string name="dark_theme">ダークテーマ</string>
-    <string name="note_font_size">Note font size</string>
-    <string name="small">Small</string>
-    <string name="normal">Normal</string>
-    <string name="large">Large</string>
-    <string name="extra_large">Extra Large</string>
+    <string name="note_font_size">メモのフォントサイズ</string>
+    <string name="small">小</string>
+    <string name="normal">通常</string>
+    <string name="large">大</string>
+    <string name="extra_large">特大</string>
 
     <!-- About -->
     <string name="about">アプリについて</string>
     <string name="website">もっとシンプルなアプリとソースコードは:\nhttp://simplemobiletools.com</string>
     <string name="email_label">ご意見やご提案をお送りください:</string>
     <string name="third_party_licences_underlined"><u>サードパーティー ライセンス</u></string>
-    <string name="invite_friends_underlined"><u>Invite friends</u></string>
-    <string name="share_text">Hey, come check out %1$s at %2$s</string>
-    <string name="invite_via">Invite via</string>
+    <string name="invite_friends_underlined"><u>友達を招待</u></string>
+    <string name="share_text">%2$s で %1$s をチェックしてみてください</string>
+    <string name="invite_via">...で招待</string>
     <string name="rate_us_underlined"><u>Play ストアで評価してください</u></string>
     <string name="follow_us">フォローしてください:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
 
     <!-- License -->
-    <string name="notice">このアプリは、私の人生を容易にするために、次のサードパーティのライブラリーを使用しています。 ありがとうございます。</string>
+    <string name="notice">このアプリは、私の暮らしにゆとりを持たせるために、次のサードパーティのライブラリーを使用しています。 ありがとうございます。</string>
     <string name="third_party_licences">サードパーティー ライセンス</string>
     <string name="butterknife_title"><u>Butter Knife (ビュー インジェクター)</u></string>
     <string name="ambilwarna_title"><u>AmbilWarna (カラー ピッカー)</u></string>
