--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -46,6 +46,8 @@
     <!-- License -->
     <string name="notice">Diese App nutzt die folgenden Drittanbieterbibliotheken, die mein Leben einfacher machen. Danke.</string>
     <string name="third_party_licences">Drittanbieterlizenzen</string>
+    <string name="kotlin_title"><u>Kotlin (Programmiersprache)</u></string>
     <string name="ambilwarna_title"><u>AmbilWarna (Color Picker)</u></string>
+    <string name="stetho_title"><u>Stetho (debugging databases)</u></string>
 
 </resources>
