--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -46,6 +46,8 @@
     <!-- License -->
     <string name="notice">Esta aplicación usa las siguientes librerías de terceros para hacerme la vida más fácil. Gracias.</string>
     <string name="third_party_licences">Licencias de terceros</string>
+    <string name="kotlin_title"><u>Kotlin (Lenguaje de programación)</u></string>
     <string name="ambilwarna_title"><u>AmbilWarna (Selector de colores)</u></string>
+    <string name="stetho_title"><u>Stetho (debugging databases)</u></string>
 
 </resources>
