--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -48,6 +48,6 @@
     <string name="third_party_licences">Licenças de terceiros</string>
     <string name="kotlin_title"><u>Kotlin (linguagem de programação)</u></string>
     <string name="ambilwarna_title"><u>AmbilWarna (seletor de cores)</u></string>
-    <string name="stetho_title"><u>Stetho (debugging databases)</u></string>
+    <string name="stetho_title"><u>Stetho (depuração a bases de dados)</u></string>
 
 </resources>
