--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -49,5 +49,6 @@
     <string name="kotlin_title"><u>Kotlin (Lenguaje de programación)</u></string>
     <string name="ambilwarna_title"><u>AmbilWarna (Selector de colores)</u></string>
     <string name="stetho_title"><u>Stetho (debugging databases)</u></string>
+    <string name="filepicker_title"><u>Simple File Picker (filepicker dialog)</u></string>
 
 </resources>
