--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -49,5 +49,6 @@
     <string name="kotlin_title"><u>Kotlin (linguagem de programação)</u></string>
     <string name="ambilwarna_title"><u>AmbilWarna (seletor de cores)</u></string>
     <string name="stetho_title"><u>Stetho (depuração a bases de dados)</u></string>
+    <string name="filepicker_title"><u>Simple File Picker (diálogo de seleção de ficheiros)</u></string>
 
 </resources>
