--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="current_note">Current note:</string>
     <string name="change_widget_note">Change widget\'s note</string>
     <string name="pick_a_note_for_widget">Pick a note for the widget</string>
+    <string name="rename">Rename</string>
+    <string name="rename_note">Rename note</string>
 
     <!-- Settings -->
     <string name="settings">Settings</string>
