--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -21,6 +21,8 @@
     <string name="current_note">現在のメモ:</string>
     <string name="change_widget_note">ウィジェットのメモを変更</string>
     <string name="pick_a_note_for_widget">ウィジェットのメモを選択</string>
+    <string name="rename">Rename</string>
+    <string name="rename_note">Rename note</string>
 
     <!-- Settings -->
     <string name="settings">設定</string>
