--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -23,6 +23,7 @@
     <string name="pick_a_note_for_widget">Wähle Notiz für das Widget</string>
     <string name="rename">Rename</string>
     <string name="rename_note">Rename note</string>
+    <string name="general_note">General note</string>
 
     <!-- Settings -->
     <string name="settings">Einstellungen</string>
