--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -23,6 +23,7 @@
     <string name="pick_a_note_for_widget">Seleccione una nota para el widget</string>
     <string name="rename">Renombrar</string>
     <string name="rename_note">Renombrar nota</string>
+    <string name="general_note">General note</string>
 
     <!-- Settings -->
     <string name="settings">Opciones</string>
