--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -54,4 +54,16 @@
     <string name="stetho_title"><u>Stetho (Debugging für Datenbanken)</u></string>
     <string name="filepicker_title"><u>Simple File Picker (Dateiauswahldialog)</u></string>
 
+    <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
+    <string name="app_short_description">A simple textfield for adding quick notes, without ads.</string>
+    <string name="app_long_description">
+        Need to take a quick note of something to buy, an address, or a startup idea? Then this is the app you\'ve been looking for! No complicated setup steps needed, just type in what you came for. Comes with autosave, so you will not discard your changes by mistake. Supports creating multiple independent notes.
+
+
+        You can access the note in no time by using the customizable and resizable widget, which opens the app on click.
+
+        Contains no ads or unnecessary permissions. It is fully opensource, provides a Dark theme too.
+
+        This app is just one piece of a bigger series of apps. You can find the rest of them at http://www.simplemobiletools.com
+    </string>
 </resources>
