--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -30,6 +30,10 @@
     <string name="normal">Normal</string>
     <string name="large">Grande</string>
     <string name="extra_large">Enorme</string>
+    <string name="gravity">Gravity</string>
+    <string name="left">Left</string>
+    <string name="center">Center</string>
+    <string name="right">Right</string>
 
     <!-- About -->
     <string name="about">Acerca de Simple Notes</string>
