--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -30,6 +30,10 @@
     <string name="normal">Normal</string>
     <string name="large">Grande</string>
     <string name="extra_large">Muito grande</string>
+    <string name="gravity">Gravity</string>
+    <string name="left">Left</string>
+    <string name="center">Center</string>
+    <string name="right">Right</string>
 
     <!-- About -->
     <string name="about">Acerca</string>
